rhn_edit - use observe queue for validate & save
validate:
  this is a straight transform from link_to + RJS remote: true,
  to a button using miqAjaxButton

  except adding observe:true so that the validate action never happens before any pending edit actions

  (auth_credentials2 is only ever used from that single Red Hat Updates edit form)

save:
  just enabling observe=true for x_edit_buttons in settings_rhn_edit

Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1532201

--- a/app/views/layouts/_auth_credentials2.html.haml
+++ b/app/views/layouts/_auth_credentials2.html.haml
@@ -41,17 +41,15 @@
 - if validate
   .form-group
     .col-md-10{:align => 'right'}
-      = link_to(_('Validate'),
-                {:action => validate_url,
-                 :button => 'validate',
-                 :type   => prefix,
-                 :id     => record_id},
-                :class                => 'btn btn-primary btn-xs',
-                :alt                  => labels[:title],
-                :title                => labels[:title],
-                :remote               => true,
-                "data-method"         => :post,
-                'data-miq_sparkle_on' => true)
+      - url = url_for_only_path(:action => validate_url,
+                                :button => 'validate',
+                                :type   => prefix,
+                                :id     => record_id)
+      = button_tag(_('Validate'),
+                   :onclick => "miqAjaxButton('#{url}', undefined, { observeQueue: true, beforeSend: true, complete: false })",
+                   :class   => 'btn btn-primary btn-xs',
+                   :alt     => labels[:title],
+                   :title   => labels[:title])
       - if validate_note
         .note
           %b= validate_note
