--- a/app/views/catalog/_form_basic_info.html.haml
+++ b/app/views/catalog/_form_basic_info.html.haml
@@ -30,10 +30,9 @@
       %label.col-md-2.control-label
         = _('Catalog')
       .col-md-4
-        - available_catalogs = @edit[:new][:available_catalogs]
         - catalog_id = @edit[:new][:catalog_id]
         = select_tag('catalog_id',
-                     options_for_select(([["<#{_('Unassigned')}>", nil]]) + available_catalogs, catalog_id),
+                     options_for_select(([["<#{_('Unassigned')}>", nil]]) + @available_catalogs, catalog_id),
                      "data-miq_sparkle_on" => true,
                      :class                => "selectpicker")
         :javascript
@@ -44,7 +43,7 @@
         = _('Dialog')
       .col-md-4
         %p.form-control-static
-          - available_dialogs =  @edit[:new][:available_dialogs].invert.to_a.sort_by { |a| a.first.downcase }
+          - available_dialogs = @edit[:new][:available_dialogs].invert.to_a.sort_by { |a| a.first.downcase }
           - options = [["<#{_('No Dialog')}>", nil]] + available_dialogs
           = select_tag('dialog_id',
                         options_for_select(options, @edit[:new][:dialog_id]),
