--- a/app/views/static/notification_drawer/notification-body.html.haml
+++ b/app/views/static/notification_drawer/notification-body.html.haml
@@ -1,63 +1,28 @@
-%div{"ng-if"    => "!drawerExpanded",
-     "ng-click" => "customScope.markNotificationRead(notification, notificationGroup)"}
-  %div.dropdown.pull-right.dropdown-kebab-pf
-    %button.btn.btn-link.dropdown-toggle{:type      => "button",
-                                         "ng-click" => "customScope.clearNotification(notification, notificationGroup)"}
-      %span.pficon.pficon-close
-  %span.pull-left{"ng-class" => "customScope.getNotficationStatusIconClass(notification)"}
-  %span.drawer-pf-notification-message.notification-message{"tooltip-popup-delay" => "500",
-                                                            "tooltip-placement"   => "bottom",
-                                                            "uib-tooltip"         => "{{notification.data.message}}"}
-    {{notification.data.message}}
-  .drawer-pf-notification-info{"ng-if" => "!notification.data.inProgress"}
-    %span.date
-      {{notification.timeStamp | date:'MM/dd/yyyy'}}
-    %span.time
-      {{notification.timeStamp | date:'h:mm:ss a'}}
-  .mini-progress.clearfix{"ng-if" => "notification.data.inProgress"}
-    %span.time
-      {{notification.timeStamp | date:'h:mm:ss a'}}
-    .mini-progress-area
-      .progress
-        %span.progress-bar.progress-bar-info{"ng-style"    => "{ width: notification.data.percentComplete + '%' }",
-                                             "uib-tooltip" => "{{notification.data.percentComplete}} #{_("% Complete")}"}
-
-.container-fluid.expanded-notification{"ng-if"    => "drawerExpanded",
-                                       "ng-click" => "customScope.markNotificationRead(notification, notificationGroup)"}
-  .row
-    .col-sm-6{"ng-class" => "{ 'col-md-4': notificationGroup.notificationType == 'task' }"}
-      %span.pull-left{"ng-class" => "customScope.getNotficationStatusIconClass(notification)"}
-      %span.drawer-pf-notification-message.notification-message{"tooltip-append-to-body" => "true",
-                                                                "tooltip-popup-delay"    => "500",
-                                                                "tooltip-placement"      => "bottom",
-                                                                "uib-tooltip"            => "{{notification.data.message}}"}
-        {{notification.data.message}}
-    .col-md-4.col-sm-3{"ng-if" => "notificationGroup.notificationType == 'task'"}
-      .drawer-pf-notification-info.expanded-info
-        %span.info-title
-          = _("Started:")
-        %span.date
-          {{notification.data.startTime | date:'MM/dd/yyyy'}}
-        %span.time
-          {{notification.data.startTime | date:'h:mm:ss a'}}
-      .progress{"ng-if" => "notification.data.inProgress"}
-        .progress-bar.progress-bar-info{"ng-style"    => "{ width: notification.data.percentComplete + '%' }",
-                                        "uib-tooltip" => "{{notification.data.percentComplete}} #{_("% Complete")}"}
-    .col-md-4.col-sm-3{"ng-if" => "notificationGroup.notificationType == 'task'"}
-      .drawer-pf-notification-info
-        %span.info-title
-          = _("Completed:")
-        %span.date
-          {{notification.data.endTime | date:'MM/dd/yyyy'}}
-        %span.time
-          {{notification.data.endTime | date:'h:mm:ss a'}}
-    .col-sm-6{"ng-if" => "notificationGroup.notificationType == 'event'"}
-      .drawer-pf-notification-info
-        %span.date
-          {{notification.data.timeStamp | date:'MM/dd/yyyy'}}
-        %span.time
-          {{notification.data.timeStamp | date:'h:mm:ss a'}}
-      .pull-right.dropdown-kebab-pf
-        %button.btn.btn-link.dropdown-toggle{:type      => "button",
-                                             "ng-click" => "customScope.clearNotification(notification, notificationGroup)"}
-          %span.pficon.pficon-close
+%div{"ng-if" => "!drawerExpanded"}
+  .dropdown.pull-right.dropdown-kebab-pf{'uib-dropdown' => ''}
+    %button.btn.btn-link.dropdown-toggle{'uib-dropdown-toggle' => '',
+                                         :type                 => 'button',
+                                         :id                   => 'dropdownKebabRight-{{ notification.id }}',
+                                         'aria-haspopup'       => 'true',
+                                         'aria-expanded'       => 'false'}
+      %span.fa.fa-ellipsis-v
+    %ul.dropdown-menu.dropdown-menu-right{'aria-labelledby' => 'dropdownKebabRight-{{ notification.id }}'}
+      %li{:role => 'menuitem', 'ng-class' => "{'disabled': !notification.unread}"}
+        %a.secondary-action{:title => _('Mark as read'), 'ng-click' => 'customScope.markNotificationRead(notification, notificationGroup)'}
+          = _('Mark as read')
+      %li{:role => 'menuitem'}
+        %a.secondary-action{:title => _('Remove'), 'ng-click' => 'customScope.clearNotification(notification, notificationGroup)'}
+          = _('Remove')
+  %span.pull-left{'ng-class' => 'customScope.getNotficationStatusIconClass(notification)',
+                  'ng-click' => 'customScope.markNotificationRead(notification, notificationGroup)'}
+  .drawer-pf-notification-content{'ng-click' => 'customScope.markNotificationRead(notification, notificationGroup)'}
+    %span.drawer-pf-notification-message{'uib-tooltip-append'      => true,
+                                         'uib-tooltip-popup-delay' => 500,
+                                         'uib-tooltip-placement'   => 'bottom',
+                                         'uib-tooltip'             => '{{ notification.message }}'}
+      {{ notification.message }}
+    .drawer-pf-notification-info{'ng-click' => 'customScope.markNotificationRead(notification, notificationGroup)'}
+      %span.date
+        {{ notification.timeStamp | date:'MM/dd/yyyy' }}
+      %span.time
+        {{ notification.timeStamp | date:'h:mm:ss a' }}
