Use fonticon+background for powerstate icons in textual summaries

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,4 +25,5 @@
  *= require ./remote_console
  *= require graphiql/graphiql.css
  *= require piecharts
+ *= require @manageiq/react-ui-components/dist/textual_summary
 */
