Enable 'Paste' button if the coppied data are in the session
Fixes: https://bugzilla.redhat.com/show_bug.cgi?id=1426390

--- a/app/views/shared/buttons/_ab_form.html.haml
+++ b/app/views/shared/buttons/_ab_form.html.haml
@@ -1,6 +1,6 @@
 #ab_form
   #policy_bar
-    - if @resolve[:uri] && Hash[*@resolve[:target_classes].flatten].invert[@resolve[:new][:target_class]] == @edit[:new][:target_class]
+    - if session[:resolve_object].present?
       = link_to({:action => "resolve", :button => "paste"},
         "data-miq_sparkle_on"  => true,
         "data-miq_sparkle_off" => true,
