Added spinner after Value is selected on tagging screen
Stop spinner after transaction is complete, when switching between values too quickly sometimes it leaves drop down open and unresponsive. Removed `data-miq_observe` from drop down value as well similar to what was done for Categories drop down, miqSelectPickerEvent is being called to observe bootstrap dropdowns.

Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1614437
Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1601915

--- a/app/views/layouts/_tag_edit_cat_tags.html.haml
+++ b/app/views/layouts/_tag_edit_cat_tags.html.haml
@@ -4,10 +4,9 @@
   - options = @entries.empty? ? [[_("<All values are assigned>"), "select"]] : [[_("<Select a value to assign>"), "select"]] + tags
   = select_tag("tag_add",
     options_for_select(options, "select"),
-    "data-miq_observe" => {:url => url}.to_json,
     "data-live-search" => "true",
     "data-container"   => "body",
     "class"            => "selectpicker")
   :javascript
     miqInitSelectPicker();
-    miqSelectPickerEvent("tag_add", "#{url}", {beforeSend: true, complete: true});
+    miqSelectPickerEvent("tag_add", "#{url}", {beforeSend: true});
