--- a/app/views/cloud_subnet/show.html.haml
+++ b/app/views/cloud_subnet/show.html.haml
@@ -1,5 +1,5 @@
 #main_div
-  - if ["instances", "cloud_subnets", "network_ports"].include?(@display) && @showtype != "compare"
+  - if ["instances", "cloud_subnets", "network_ports", "security_groups"].include?(@display) && @showtype != "compare"
     = render :partial => "layouts/gtl", :locals => {:action_url => "show/#{@record.id}"}
   - elsif @showtype == 'main'
     = render :partial => "layouts/textual_groups_generic"
