--- a/app/views/network_router/show.html.haml
+++ b/app/views/network_router/show.html.haml
@@ -1,5 +1,5 @@
 #main_div
-  - if %w(instances cloud_subnets floating_ips).include?(@display) && @showtype != "compare"
+  - if %w(instances cloud_subnets floating_ips security_groups).include?(@display) && @showtype != "compare"
     = render :partial => "layouts/gtl", :locals => {:action_url => "show/#{@record.id}"}
   - elsif @showtype == 'main'
     = render :partial => "layouts/textual_groups_generic"
